hphp/test/quick/unset_private_prop.php.expectf
PHP Fatal error:  Cannot access private property F::$foo in %s on line 9
